# BaryLab

./: CMakeLists.txt  README.md  TODO.txt  UserSettings.example.cmake
Authoring/: Icons.psd  InitialConditions.psd
BLabCoreLib/: BLabDebug.h  BLabException.h  BLabMath.h  BLabOpenGL.cpp  BLabOpenGL.h  BLabOpenGLMappedBuffer.h  BLabOpenGL_Ext.cpp  BLabRandomEngine.h  BLabTypes.cpp  BLabTypes.h  BarycentricCoords.h  Buffer.h  CMakeLists.txt  Colors.h  Edges.cpp  Edges.h  ElementContainer.h  ElementIndexRangeIterator.h  EventDispatcher.h  GameDebug.h  GameEventDispatcher.h  GameException.h  GameParameters.h  GameRandomEngine.h  Geometry.h  HumanNpcState.cpp  HumanNpcState.h  IEventHandler.h  IGameEventHandlers.h  ImageFileTools.cpp  LabController.cpp  LabController.h  LabController_Simulation.cpp  LabParameters.cpp  LabParameters.h  MaterialDatabase.h  Materials.cpp  Materials.h  Mesh.h  MeshBuilder.cpp  (+44 more)
BLabCoreLib/NpcSimulation/: NpcParticles.cpp  NpcParticles.h  Npcs.cpp  Npcs_HumanSimulation.cpp
BaryLab/: AboutDialog.cpp  CMakeLists.txt  ControlToolbar.cpp  ControlToolbar.h  LoggingDialog.cpp  MainApp.cpp  MainFrame.cpp  MainFrame.h  ProbeToolbar.cpp  ProbeToolbar.h  SettingsDialog.cpp  SettingsDialog.h  SettingsManager.cpp  SettingsManager.h  StandardSystemPaths.cpp  StandardSystemPaths.h  ToolController.cpp  ToolController.h  Tools.cpp  Tools.h  WxHelpers.cpp  WxHelpers.h
BaryLab/Resources/: BaryLab.rc
BaryLab/UIControls/: LinearSliderCore.cpp  ScalarTimeSeriesProbeControl.cpp  ScalarTimeSeriesProbeControl.h  SliderControl.h
Data/: materials_npc.json  materials_structural.json
Data/Shaders/: background.glsl  edges.glsl  meshvelocity.glsl  npclimbs.glsl  npcparticletrajectories.glsl  npcquads.glsl  npcsprings.glsl  particles.glsl  particletrajectories.glsl  selectedtriangles.glsl  shipvelocity.glsl  springs.glsl  triangles.glsl  vertices.glsl
Game/: CMakeLists.txt  Formulae.h  GameEventDispatcher.h  GameParameters.cpp  GameParameters.h  IGameEventHandlers.h  ImageFileTools.cpp  ImageFileTools.h  LabController.cpp  LabController.h  MaterialDatabase.h  Materials.cpp  Materials.h  Model.cpp  Model.h  NpcDatabase.cpp  NpcDatabase.h  OceanFloor.cpp  OceanFloor.h  OceanSurface.h  PerfStats.h  Physics.h  Points.cpp  Points.h  RenderContext.cpp  RenderContext.h  RenderTypes.h  ResourceLocator.h  Ship.h  ShipBuilder.cpp  ShipBuilder.h  ShipBuilderTypes.h  ShipDefinition.cpp  ShipDefinition.h  ShipFactory.cpp  ShipFactory.h  ShipFactoryTypes.h  ShipFloorplanizer.cpp  ShipFloorplanizer.h  Springs.cpp  (+8 more)
Game/NpcSimulation/: NpcParticles.cpp  NpcParticles.h  Npcs.cpp  Npcs.h  Npcs_HumanSimulation.cpp  Npcs_Simulation.cpp
GameCore/: BoundedVector.h  Buffer2D.h  CMakeLists.txt  ElementContainer.h  FixedSizeVector.h  GameGeometry.h  GameMath.h  GameTypes.cpp  GameTypes.h  ImageData.h  Log.h  Settings.cpp  Utils.cpp  Utils.h  Vectors.h
GameOpenGL/: CMakeLists.txt  GameOpenGL.cpp  GameOpenGL.h  GameOpenGLMappedBuffer.h  GameOpenGL_Ext.cpp  ShaderManager.cpp  ShaderManager.h
